# pystencils-sfg

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Notes.md  README.md  Readme.md  TestSequencing.cpp  TestSequencing.h  conftest.py  install_git_hooks.sh  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
cmake/: FindPystencilsSfg.cmake
docs/: api.md  index.md
docs/api/: composer.md  composition.md  context.md  cpp_std.md  emission.md  frontend.md  generator.md  index.md  source_components.md  source_objects.md  tree.md
docs/css/: mkdocstrings.css
docs/source/: .gitignore  conf.py  getting_started.md  index.md  installation.md
docs/source/_util/: sfg_monkeypatch.py
docs/source/api/: composer.rst  errors.rst  generation.rst  index.rst  ir.rst  lang.rst
docs/source/usage/: api_modelling.md  cli_and_build_system.md  config_and_cli.md  generator_scripts.md  how_to_composer.md  index.md  project_integration.md  tips_n_tricks.md
docs/source/usage/examples/: .gitignore  build.py
docs/usage/: building.md  cli_and_build_system.md  generator_scripts.md  index.md  tips_n_tricks.md
git-hooks/: pre-commit
integration/: TestSequencing.py  test_class_composer.py  test_classes.py  test_cuda.py  test_sycl.py  test_sycl_buffer.py
integration/CMakeDemo/: CMakeLists.txt  codegen_config.py  kernels.py  more_kernels.py
integration/MakeDemo/: Makefile  kernels.py  main.cpp
pystencils_sfg/: __init__.py  context.py  kernel_namespace.py  source_components.py
pystencils_sfg/emitters/cpu/: basic_cpu.py  jinja_filters.py
pystencils_sfg/emitters/cpu/templates/: BasicCpu.tmpl.cpp  BasicCpu.tmpl.h
pystencils_sfg/source_concepts/: containers.py  source_concepts.py
pystencils_sfg/source_concepts/cpp/: std_mdspan.py
pystencils_sfg/tree/: __init__.py  basic_nodes.py  builders.py  conditional.py  visitors.py
pystencilssfg/: __init__.py  __main__.py  configuration.py  context.py  kernel_namespace.py  source_components.py  types.py
pystencilssfg/cmake/: PystencilsSfgFunctions.cmake  __init__.py
pystencilssfg/emitters/cpu/: basic_cpu.py  jinja_filters.py
pystencilssfg/emitters/cpu/templates/: BasicCpu.tmpl.cpp  BasicCpu.tmpl.h
pystencilssfg/source_components/: __init__.py  function.py  header_include.py
pystencilssfg/source_concepts/: __init__.py  containers.py  source_concepts.py  source_objects.py
pystencilssfg/source_concepts/cpp/: __init__.py  std_mdspan.py  std_vector.py
pystencilssfg/tree/: __init__.py  basic_nodes.py  builders.py  conditional.py  deferred_nodes.py  dispatcher.py  visitors.py
src/pystencilssfg/: __init__.py  __main__.py  _version.py  cli.py  composer.py  config.py  configuration.py  context.py  exceptions.py  generator.py  source_components.py  types.py
src/pystencilssfg/cmake/: FindPystencilsSfg.cmake  PystencilsSfgFunctions.cmake  __init__.py
src/pystencilssfg/cmake/modules/: PystencilsSfg.cmake
src/pystencilssfg/composer/: __init__.py  basic_composer.py  class_composer.py  composer.py  custom.py  gpu_composer.py  mixin.py
src/pystencilssfg/emission/: __init__.py  clang_format.py  emitter.py  file_printer.py  header_impl_pair.py  header_only.py  header_source_pair.py  prepare.py  printers.py
src/pystencilssfg/emitters/: classes_printing.py  header_source_pair.py  jinja_filters.py
src/pystencilssfg/emitters/cpu/: basic_cpu.py
src/pystencilssfg/extensions/: __init__.py  gpu.py  sycl.py
src/pystencilssfg/ir/: __init__.py  analysis.py  call_tree.py  entities.py  postprocessing.py  source_components.py  syntax.py
src/pystencilssfg/lang/: __init__.py  expressions.py  extractions.py  gpu.py  headers.py  types.py
src/pystencilssfg/printing/: header_printer.py
src/pystencilssfg/source_components/: function.py  header_include.py
src/pystencilssfg/source_concepts/: __init__.py  source_objects.py
src/pystencilssfg/tree/: __init__.py  basic_nodes.py  conditional.py  deferred_nodes.py  dispatcher.py  visitors.py
src/pystencilssfg/visitors/: __init__.py  collectors.py  dispatcher.py  tree_visitors.py
standalone/: CMakeLists.txt  requirements.txt
test_classses_out/: test_classes.cpp  test_classes.h
tests/: TestSequencing.py
tests/cmake_integration/: .gitignore  CMakeLists.txt  kernels.py  more_kernels.py
tests/data/: project_config.py
tests/extensions/: test_gpu.py  test_sycl.py
tests/generator/: test_config.py
tests/generator_scripts/: .gitignore  README.md  index.yaml  test_generator_scripts.py
tests/generator_scripts/config/: TestConfigModule_cfg.py
tests/generator_scripts/expected/: SimpleClasses.h  Structural.h  Variables.h
tests/generator_scripts/scripts/: SimpleClasses.py  SimpleJacobi.py  Structural.py  TestConfigModule.py  TestExtraCommandLineArgs.py  TestIllegalArgs.py  TestSyclBuffer.py  Variables.py
tests/generator_scripts/source/: BasicDefinitions.py  ComposerFeatures.harness.cpp  ComposerFeatures.py  ComposerHeaderOnly.harness.cpp  ComposerHeaderOnly.py  Conditionals.py  CudaKernels.harness.cpp  CudaKernels.py  HipKernels.harness.cpp  HipKernels.py  JacobiMdspan.harness.cpp  JacobiMdspan.py  MdSpanFixedShape.harness.cpp  MdSpanFixedShapeLayouts.py  MdSpanLbStreaming.harness.cpp  MdSpanLbStreaming.py  NestedNamespaces.harness.cpp  NestedNamespaces.py  ScaleKernel.harness.cpp  ScaleKernel.py  SimpleClasses.harness.cpp  SimpleClasses.py  StlContainers1D.harness.cpp  StlContainers1D.py  SyclBuffers.harness.cpp  SyclBuffers.py  SyclKernels.py  TestIncludeSorting.py  VectorExtraction.harness.cpp  VectorExtraction.py
tests/integration/: test_cli.py  test_cmake.py  test_generator_scripts.py
tests/integration/cmake_project/: .gitignore  CMakeLists.txt  CliTest.py  CustomDirTest.py  GenTest.py  TestApp.cpp  gen_config.py
tests/integration/expected/: SimpleClasses.cpp
tests/integration/scripts/: SimpleClasses.py  SimpleJacobi.py
tests/ir/: test_postprocessing.py
tests/lang/: test_cpp_stl_classes.py  test_expressions.py  test_headers.py  test_sycl_accessor.py  test_types.py
tests/mdspan/: Makefile  kernels.py  main.cpp
(+23 files in other folders)
