[project]
name = "pystencilssfg"
description = "pystencils Source File Generator"
authors = [
    {name = "Frederik Hennig", email = "frederik.hennig@fau.de"},
]
dependencies = [
    "pystencils>=1.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "noneyet"}
dynamic = ["version"]

[project.scripts]
sfg-cli = "pystencilssfg.cli:cli_main"

[build-system]
requires = [
    "setuptools>=69",
    "versioneer>=0.29",
    "tomli; python_version < '3.11'"
]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
interactive = [
    "ipython>=8.17.2",
]
code_quality = [
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocstrings[python]>=0.24.0",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pystencilssfg/_version.py"
versionfile_build = "pystencilssfg/_version.py"
tag_prefix = ""
parentdir_prefix = "pystencilssfg-"
