[project]
name = "pystencilssfg"
description = "pystencils Source File Generator"
authors = [
    {name = "Frederik Hennig", email = "frederik.hennig@fau.de"},
]
dependencies = [
    "pystencils>=2.0.dev0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "COPYING.txt" }
dynamic = ["version"]

[project.scripts]
sfg-cli = "pystencilssfg.cli:cli_main"

[build-system]
requires = [
    "setuptools>=69",
    "versioneer[toml]>=0.29",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
testing = [
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "black"
]
docs = [
    "sphinx",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-book-theme==1.1.3",  # workaround for https://github.com/executablebooks/sphinx-book-theme/issues/865
    "myst-parser",
    "sphinx_design",
    "sphinx_autodoc_typehints",
    "sphinx-copybutton",
    "packaging",
    "clang-format"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pystencilssfg/_version.py"
versionfile_build = "pystencilssfg/_version.py"
tag_prefix = "v"
parentdir_prefix = "pystencilssfg-"

[tool.coverage.run]
omit = [
    "setup.py",
    "src/pystencilssfg/_version.py",
    "integration/*"
]
